# Lang_chain_projects

./: 10groq.ipynb  11langserve.py  12App.py  13vectorstore.py  14chatbotAgent.ipynb  2embeddings.ipynb  3ollamaembeddings.ipynb  4huggingace.ipynb  6chroma.ipynb  7openAi_ollama.ipynb  8ollamaApp.ipynb  README.md  README_12App.md  README_1langchain.md  README_vectorretriever.md  babel.json  building_with_claude_api.txt  req.txt  test.py  textfile.txt
LC/: 10groq.ipynb  12App.py  14app.py  14chatbotAgent.ipynb  1langchain.ipynb  5faiss.ipynb  7openAi_ollama.ipynb  9app.py  babel.json
Readme/: README.md  README_2embeddings.md  README_3ollamaembeddings.md  README_4huggingace.md  README_5faiss.md  README_search_engine.md  README_vectorretriever.md
faiss_index/: index.faiss  index.pkl
withuv/: 04QAchatbotMultimodal.py  05RAG_groq.py  1LCv1.ipynb  2streaming_batchig.ipynb  3middleware.ipynb  README.md  main.py  pyproject.toml  req.txt  search_engine.py
